--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -36,6 +36,12 @@
 
 @import "project/_header.sass"
 
+@import "project/_location.sass"
+
+@import "project/_main-menu.sass"
+
+@import "project/_search-form.sass"
+
 @import "project/_breadcrumbs.sass"
 
 @import "project/_pager.sass"
@@ -51,3 +57,5 @@
 @import "project/_search-bar.sass"
 
 @import "project/_footer.sass"
+
+@import "project/_float-bar.sass"
