--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -17,17 +17,26 @@ body
   overflow-wrap: break-word
   overflow-x: hidden
 
+  &.overflow
+    overflow: hidden
+
 .page-content
   flex: 1 0 auto
-  padding-top: 160px
+  padding-top: 90px
   padding-bottom: 80px
+
+  @media(min-width: 1024px)
+    padding-top: 160px
 
 .container
   margin-left: auto
   margin-right: auto
-  max-width: 1320px
+  max-width: 1570px
   padding-left: 20px
   padding-right: 20px
+
+  @media(min-width: 1500px)
+    width: 90%
 
 .page-section
   margin-bottom: 60px
