--- a/src/css/base/_select.sass
+++ b/src/css/base/_select.sass
@@ -192,3 +192,59 @@
       &:last-child
         border-bottom-left-radius: 4px
         border-bottom-right-radius: 4px
+
+  &--type_4
+    font-size: 12px
+
+    .select-wrapper__container,
+    .select2-container .select2-selection--single
+      height: 32px
+
+    .select2-container--default .select2-selection--single
+      border-radius: 4px
+      background-color: #fff
+      border-color: $green
+
+    .select2-container--default .select2-selection--single .select2-selection__rendered
+      color: $text-color
+      line-height: 28px
+      padding-left: 12px
+      padding-right: 30px
+
+    .select2-container--default .select2-selection--single .select2-selection__arrow
+      height: 28px
+      width: 30px
+
+    .select2-container--default .select2-selection--single .select2-selection__arrow b
+      background-image: url("data:image/svg+xml,%3Csvg width='12' height='6' viewBox='0 0 12 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 6L0.803847 -2.51245e-08L11.1962 8.834e-07L6 6Z' fill='%23023047'/%3E%3C/svg%3E%0A")
+
+    .select2-dropdown
+      border-color: $green
+
+    .select2-container--default .select2-results > .select2-results__options
+      scrollbar-color: rgba($text-color, 0.8) $green_light
+
+      &::-webkit-scrollbar-track
+        background-color: $green_light
+
+      &::-webkit-scrollbar-thumb
+        background-color: rgba($text-color, 0.8)
+
+    .select2-container--default .select2-results__option--selected
+      background-color: $green_light
+      color: $text-color
+
+    .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable
+      background-color: $green_light
+      color: $text-color
+
+    .select2-dropdown
+      background-color: #fff
+      border-bottom-left-radius: 4px
+      border-bottom-right-radius: 4px
+      color: $text-color
+
+    .select2-results__option
+      &:last-child
+        border-bottom-left-radius: 4px
+        border-bottom-right-radius: 4px
