--- a/src/css/project/_breadcrumbs.sass
+++ b/src/css/project/_breadcrumbs.sass
@@ -1,6 +1,7 @@
 .breadcrumbs
   color: $text-color
   display: flex
+  font-size: 10px
   font-weight: 700
   flex-wrap: wrap
   list-style: none
@@ -8,6 +9,15 @@
   margin-left: auto
   margin-right: auto
   padding: 0
+
+  @media(min-width: 768px)
+    font-size: 12px
+
+  @media(min-width: 1024px)
+    font-size: 14px
+
+  @media(min-width: 1350px)
+    font-size: 16px
 
   &__item
     align-items: center
