--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -8,6 +8,8 @@
 
 <script src="js/header.js"></script>
 
+<script src="js/header-menu.js"></script>
+
 <script src="js/scroller-min.js"></script>
 <script src="js/search.js"></script>
 
