--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -56,6 +56,8 @@
 
 @import "project/_search-bar.sass"
 
+@import "project/_map-block.sass"
+
 @import "project/_footer.sass"
 
 @import "project/_float-bar.sass"
