--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,3 +1,158 @@
 <footer class="footer">
+    <div class="container">
+        <div class="footer__top">
+            <div class="footer__top-left">
+                <div class="footer-menu">
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Анализы</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Анализ</a></li>
+                            <li><a href="#">Ограничение по приему биоматериалов</a></li>
+                            <li><a href="#">Подготовка к анализам</a></li>
+                            <li><a href="#">Где получить результаты</a></li>
+                            <li><a href="#">Какие анализы мы делаем</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Пациентам</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Забор анализов на дом</a></li>
+                            <li><a href="#">Телемедицина</a></li>
+                            <li><a href="#">Болезни и симптомы</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Справки</a></li>
+                            <li><a href="#">Страховые компании</a></li>
+                            <li><a href="#">Партнеры</a></li>
+                            <li><a href="#">Детская педиатрия выездная NB</a></li>
+                            <li><a href="#">Бонусная программа</a></li>
+                            <li><a href="#">Полезные статьи и материалы</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Адреса</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Лабораторные терминалы</a></li>
+                            <li><a href="#">Клиники</a></li>
+                        </ul>
+                        <h3 class="footer-menu__title"><a href="#">Программы</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">COVID-19</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Клиника</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Направления</a></li>
+                            <li><a href="#">Специалисты</a></li>
+                            <li><a href="#">Медицинские услуги</a></li>
+                            <li><a href="#">Навигатор</a></li>
+                        </ul>
+                        <h3 class="footer-menu__title"><a href="#">Врачам</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Высшая школа</a></li>
+                            <li><a href="#">Клуб врачей</a></li>
+                            <li><a href="#">Что такое клуб?</a></li>
+                            <li><a href="#">База знаний</a></li>
+                            <li><a href="#">Работать у нас</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">О компании</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Руководство</a></li>
+                            <li><a href="#">История</a></li>
+                            <li><a href="#">Вакансии</a></li>
+                            <li><a href="#">Лицензия и сертификаты</a></li>
+                            <li><a href="#">Миссия</a></li>
+                            <li><a href="#">Команда</a></li>
+                            <li><a href="#">Мероприятия</a></li>
+                            <li><a href="#">Контакты</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Юридическая информация</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Работа в системе ОМС</a></li>
+                            <li><a href="#">Оказание платных услуг</a></li>
+                            <li><a href="#">Специальная оценка условий труда</a></li>
+                            <li><a href="#">Пользовательское соглашение</a></li>
+                            <li><a href="#">Политика конфденциальности</a></li>
+                            <li><a href="#">ФЗ 54</a></li>
+                            <li><a href="#">Образец договора</a></li>
+                            <li><a href="#">Реквизиты</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Корпоративным клиентам</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Медицинским организациям</a></li>
+                            <li><a href="#">Немедицинским организациям</a></li>
+                            <li><a href="#">Страховым организациям</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-menu__column">
+                        <h3 class="footer-menu__title"><a href="#">Для прессы</a></h3>
+                        <ul class="footer-menu__list">
+                            <li><a href="#">Медицинским организациям</a></li>
+                            <li><a href="#">Немедицинским организациям</a></li>
+                            <li><a href="#">Страховым организациям</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__top-right">
+                <a class="footer__button button button--type_1" href="#">Личный кабинет</a>
 
+                <p class="footer__phone">
+                    <a href="tel:+78126004200">8 (812) 600-42-00</a>
+                    <span>Многоканальный</span>
+                </p>
+                <p class="footer__phone"><a href="tel:+78126004200">8 (812) 600-42-00</a></p>
+                <p class="footer__work-time">
+                    Принимаем звонки сегодня<br>
+                    <span>С 7:30 - 22:00</span>
+                </p>
+
+                <div class="footer__contact">
+                    <svg class="icon">
+                        <use xlink:href="#city_2"></use>
+                    </svg>
+                    <span>Центральный офис</span><br>
+                    <b>
+                        Время работы:<br>
+                        пн.-пт.: с 09:00 до 17:45<br>
+                        Пулковское шоссе, дом 28А<br>
+                        8 (812) 600-47-12
+                    </b>
+                </div>
+                <div class="footer__contact">
+                    <svg class="icon">
+                        <use xlink:href="#envelope"></use>
+                    </svg>
+                    <span>Почта для связи:</span><br>
+                    <a href="#"><b>info@cdmed.ru</b></a>
+                </div>
+                <div class="footer__contact">
+                    <svg class="icon">
+                        <use xlink:href="#voice"></use>
+                    </svg>
+                    <span>Пожелания и предложения по качеству работы можно отправить на электронную почту <a href="mailto:expert@cdmed.ru"><b>expert@cdmed.ru</b></a></span>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="footer__logo">
+                <img src="images/logo_full.svg" alt="СЕВЕРО-ЗАПАДНЫЙ ЦЕНТР ДОКАЗАТЕЛЬНОЙ МЕДИЦИНЫ">
+            </div>
+            <div class="footer__links">
+                <ul>
+                    <li><a href="#">Политика конфиденциальности</a></li>
+                    <li><a href="#">Обработка персональных даных</a></li>
+                    <li><a href="#">Карта сайта</a></li>
+                </ul>
+            </div>
+            <div class="footer__copyright">© СЗЦДМ 2021</div>
+        </div>
+    </div>
 </footer>
