--- a/src/css/project/_footer.sass
+++ b/src/css/project/_footer.sass
@@ -1,6 +1,185 @@
 .footer
   flex-shrink: 0
-  padding-bottom: 64px
+  padding-bottom: 74px
+  padding-top: 32px
 
-  @media(min-width: 1024px)
-    padding-bottom: 0
+  @media(min-width: 768px)
+    padding-bottom: 40px
+
+  &__top
+    margin-bottom: 24px
+    @media(min-width: 1024px)
+      display: flex
+      margin-left: -16px
+      margin-right: -16px
+
+  &__top-left
+    @media(min-width: 1024px)
+      padding-left: 16px
+      padding-right: 16px
+      width: 77%
+
+  &__top-left-inner
+    @media(min-width: 1024px)
+      display: flex
+      flex-wrap: wrap
+      margin-left: -16px
+      margin-right: -16px
+
+  &__top-right
+    @media(min-width: 1024px)
+      min-width: 300px
+      padding-left: 16px
+      padding-right: 16px
+      width: 23%
+
+  &__button
+    border-radius: $border-radius
+    font-weight: 900
+    height: 56px
+    margin-bottom: 32px
+    width: 100%
+
+  &__phone
+    a
+      color: $text-color
+      display: block
+      font-size: 24px
+      font-weight: 800
+      line-height: 1
+      text-decoration: none
+
+  &__work-time
+    @media(min-width: 1024px)
+      margin-bottom: 40px
+
+    @media(min-width: 1350px)
+      margin-bottom: 80px
+
+    span
+      align-items: center
+      border: 2px solid $text-color
+      border-radius: 4px
+      display: inline-flex
+      font-weight: 700
+      height: 36px
+      justify-content: center
+      margin-top: 12px
+      padding: 12px 24px
+      text-align: center
+      vertical-align: top
+
+  &__contact
+    position: relative
+    padding-left: 60px
+
+    &:not(:last-child)
+      margin-bottom: 24px
+
+    a
+      color: $text-color
+      text-decoration: none
+
+    .icon
+      fill: $text-color
+      height: 40px
+      left: 0
+      position: absolute
+      top: 0
+      width: 40px
+
+  &__bottom
+    @media(min-width: 768px)
+      align-items: center
+      display: flex
+      justify-content: space-between
+
+  &__logo
+    margin-bottom: 16px
+    margin-left: auto
+    margin-right: auto
+    width: 200px
+
+    @media(min-width: 768px)
+      margin-bottom: 0
+      margin-left: 0
+      margin-right: 0
+
+    @media(min-width: 1200px)
+      width: 254px
+
+  &__links
+    margin-bottom: 16px
+    text-align: center
+
+    @media(min-width: 768px)
+      margin-bottom: 0
+      text-align: left
+
+    @media(min-width: 1024px)
+      font-size: 14px
+
+    ul
+      list-style: none
+      padding: 0
+
+      @media(min-width: 1024px)
+        display: flex
+
+      li
+        &:not(:last-child)
+          @media(min-width: 1024px)
+            margin-right: 24px
+
+    a
+      color: $text-color
+      text-decoration: none
+
+      &:hover,
+      &:focus
+        color: $green
+
+  &__copyright
+    text-align: center
+
+.footer-menu
+  @media(min-width: 540px)
+    display: flex
+    flex-wrap: wrap
+    margin-left: -16px
+    margin-right: -16px
+
+  &__column
+    margin-bottom: 40px
+
+    @media(min-width: 540px)
+      padding-left: 16px
+      padding-right: 16px
+      width: 50%
+
+    @media(min-width: 768px)
+      width: 33.33333%
+
+    @media(min-width: 1200px)
+      width: 25%
+
+  &__title
+    font-size: 18px
+    font-weight: 700
+    margin-bottom: 0
+
+  a
+    color: $text-color
+    display: inline-block
+    padding-top: 6px
+    padding-bottom: 6px
+    text-decoration: none
+    vertical-align: top
+
+    &:hover,
+    &:focus
+      color: $green
+
+  &__list
+    list-style: none
+    padding: 0
