--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -24,7 +24,7 @@
 
 @import "base/_select.sass"
 
-//@import "vendor/slick.scss"
+@import "vendor/slick.scss"
 
 //@import "vendor/jquery.fancybox.scss"
 
@@ -58,6 +58,19 @@
 
 @import "project/_map-block.sass"
 
+@import "project/_more-block.sass"
+
 @import "project/_footer.sass"
 
 @import "project/_float-bar.sass"
+
+
+@import "project/_complex.sass"
+
+@import "project/_news.sass"
+
+@import "project/_doctors.sass"
+
+@import "project/_tiles.sass"
+
+@import "project/_slider-block.sass"
