--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -13,4 +13,6 @@
 <script src="js/accordions.js"></script>
 <script src="js/tabs.js"></script>
 
+<script src="js/slick.min.js"></script>
+
 <script src="js/main.js"></script>
