--- a/src/css/project/_footer.sass
+++ b/src/css/project/_footer.sass
@@ -6,6 +6,9 @@
   @media(min-width: 768px)
     padding-bottom: 40px
 
+  @media(min-width: 1200px) and (max-width: 1580px)
+    font-size: 14px
+
   &__top
     margin-bottom: 24px
     @media(min-width: 1024px)
@@ -35,7 +38,7 @@
 
   &__button
     border-radius: $border-radius
-    font-weight: 900
+    font-weight: 800
     height: 56px
     margin-bottom: 32px
     width: 100%
