--- a/src/css/base/_buttons.sass
+++ b/src/css/base/_buttons.sass
@@ -84,7 +84,8 @@
 
     &:hover,
     &:focus
-      background-color: rgba($text-color, 0.7)
+      //background-color: rgba($text-color, 0.7)
+      background-color: $green
 
     &:disabled,
     &.disabled
