--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -34,6 +34,10 @@ h1,
   @media(min-width: 1350px)
     font-size: 40px
 
+  small
+    font-size: 66%
+    font-weight: 700
+
 h2,
 .h2
   font-size: 23px
@@ -45,6 +49,10 @@ h2,
 
   @media(min-width: 1350px)
     font-size: 32px
+
+  small
+    font-size: 66%
+    font-weight: 700
 
 h3,
 .h3
