--- a/src/css/project/_complex.sass
+++ b/src/css/project/_complex.sass
@@ -9,6 +9,9 @@
     margin-left: -6px
     margin-right: -6px
 
+  &:not(:last-child)
+    margin-bottom: 44px
+
   &__item
     margin-bottom: 12px
 
