--- a/src/css/project/_more-block.sass
+++ b/src/css/project/_more-block.sass
@@ -1,6 +1,9 @@
 .more-block
   text-align: right
 
+  &:not(:last-child)
+    margin-bottom: 46px
+
   &__link
     align-items: center
     color: $text-color
