--- a/src/css/project/_slider-block.sass
+++ b/src/css/project/_slider-block.sass
@@ -2,6 +2,9 @@
   @media(min-width: 1024px)
     display: flex
 
+  &:not(:last-child)
+    margin-bottom: 56px
+
   &__slider
     margin-bottom: 12px
     position: relative
