--- a/src/css/project/_tiles.sass
+++ b/src/css/project/_tiles.sass
@@ -25,6 +25,7 @@
         width: 25%
 
 .tile-link
+  background-color: #fff
   border-radius: $border-radius
   box-shadow: none
   color: $text-color
@@ -33,7 +34,7 @@
   height: 100%
   position: relative
   text-decoration: none
-  transition: box-shadow 0.3s
+  transition: box-shadow 0.3s, background-color 0.3s
   width: 100%
 
   &:hover,
