--- a/src/css/project/_doctors.sass
+++ b/src/css/project/_doctors.sass
@@ -17,6 +17,9 @@
     margin-left: -20px
     margin-right: -20px
 
+  &:not(:last-child)
+    margin-bottom: 56px
+
   &.slick-initialized
     .doctors-list__item
       margin-bottom: 0
@@ -40,7 +43,6 @@
       padding-right: 20px
 
 .doctor
-  background-color: #fff
   display: flex
   flex-direction: column
   margin-left: auto
@@ -53,6 +55,7 @@
   &:focus
     .doctor__image
       background-color: $purple_light
+      box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
 
   &__image
     background-color: #fff
@@ -60,7 +63,7 @@
     border-radius: $border-radius
     margin-bottom: 20px
     padding: 16px
-    transition: background-color 0.3s
+    transition: background-color 0.3s, box-shadow 0.3s
 
     img
       border-radius: $border-radius
