--- a/src/css/project/_footer.sass
+++ b/src/css/project/_footer.sass
@@ -1,7 +1,9 @@
 .footer
+  background-color: #fff
   flex-shrink: 0
   padding-bottom: 74px
   padding-top: 32px
+  z-index: 2
 
   @media(min-width: 768px)
     padding-bottom: 40px
@@ -52,6 +54,10 @@
       line-height: 1
       text-decoration: none
 
+      &:hover,
+      &:focus
+        color: $green
+
   &__work-time
     @media(min-width: 1024px)
       margin-bottom: 40px
@@ -82,6 +88,10 @@
     a
       color: $text-color
       text-decoration: none
+
+      &:hover,
+      &:focus
+        color: $green
 
     .icon
       fill: $text-color
