--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -74,3 +74,7 @@
 @import "project/_tiles.sass"
 
 @import "project/_slider-block.sass"
+
+@import "project/_about.sass"
+
+@import "project/_decor.sass"
