--- a/src/css/project/_complex.sass
+++ b/src/css/project/_complex.sass
@@ -12,6 +12,9 @@
   &:not(:last-child)
     margin-bottom: 44px
 
+    @media(min-width: 1350px)
+      margin-bottom: 84px
+
   &__item
     margin-bottom: 12px
 
@@ -51,6 +54,9 @@
     margin-bottom: 20px
 
     @media(min-width: 1350px)
+      font-size: 20px
+
+    @media(min-width: 1900px)
       font-size: 24px
 
   &__subtitle
@@ -60,6 +66,9 @@
     margin-bottom: 12px
 
     @media(min-width: 1350px)
+      font-size: 20px
+
+    @media(min-width: 1900px)
       font-size: 24px
 
     a
