--- a/src/css/project/_doctors.sass
+++ b/src/css/project/_doctors.sass
@@ -20,6 +20,9 @@
   &:not(:last-child)
     margin-bottom: 56px
 
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
   &.slick-initialized
     .doctors-list__item
       margin-bottom: 0
@@ -80,6 +83,9 @@
     margin-bottom: 0
 
     @media(min-width: 1350px)
+      font-size: 20px
+
+    @media(min-width: 1900px)
       font-size: 24px
 
     a
