--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -59,6 +59,9 @@
       width: 50px
 
     @media(min-width: 1350px)
+      width: 215px
+
+    @media(min-width: 1500px)
       margin-right: 32px
       width: 254px
 
