--- a/src/css/project/_news.sass
+++ b/src/css/project/_news.sass
@@ -71,6 +71,9 @@
     line-height: 1.2
 
     @media(min-width: 1350px)
+      font-size: 20px
+
+    @media(min-width: 1900px)
       font-size: 24px
 
   &__more
