--- a/src/css/project/_about.sass
+++ b/src/css/project/_about.sass
@@ -2,11 +2,17 @@
   &:not(:last-child)
     margin-bottom: 56px
 
-  @media(min-width: 1024px)
-    align-items: center
-    display: flex
-    margin-left: -20px
-    margin-right: -20px
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
+  &__columns
+    margin-bottom: 56px
+
+    @media(min-width: 1024px)
+      align-items: center
+      display: flex
+      margin-left: -20px
+      margin-right: -20px
 
   &__column
     @media(min-width: 1024px)
@@ -25,8 +31,7 @@
 
     &:last-child
       @media(min-width: 1024px)
-        flex-grow: 1
-        width: 60%
+        width: 50%
 
   blockquote
     margin: 0
@@ -66,11 +71,12 @@
       padding-right: 20px
       width: 50%
 
-    @media(min-width: 1350px)
-      margin-bottom: 48px
+    @media(min-width: 1024px)
+      margin-bottom: 0
+      width: 24%
 
     .h1
-      margin-bottom: 0
+      margin-bottom: 8px
 
       small
         @media(max-width: 1899px)
