--- a/src/css/project/_more-block.sass
+++ b/src/css/project/_more-block.sass
@@ -4,6 +4,9 @@
   &:not(:last-child)
     margin-bottom: 46px
 
+    @media(min-width: 1350px)
+      margin-bottom: 86px
+
   &__link
     align-items: center
     color: $text-color
