--- a/src/css/project/_search-bar.sass
+++ b/src/css/project/_search-bar.sass
@@ -1,7 +1,10 @@
 .search-bar
   &:not(:last-child)
     margin-bottom: 56px
-    
+
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
   &__title-block
     align-items: center
     display: flex
