--- a/src/css/project/_slider-block.sass
+++ b/src/css/project/_slider-block.sass
@@ -5,6 +5,9 @@
   &:not(:last-child)
     margin-bottom: 56px
 
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
   &__slider
     margin-bottom: 12px
     position: relative
