--- a/src/css/base/_group-buttons.sass
+++ b/src/css/base/_group-buttons.sass
@@ -48,6 +48,7 @@
   &__button-text
     align-items: center
     border: 2px solid $purple
+    background-color: #fff
     color: $purple
     cursor: pointer
     display: flex
