--- a/src/css/project/_tabs.sass
+++ b/src/css/project/_tabs.sass
@@ -12,6 +12,8 @@
     margin: 0
     overflow-x: auto
     padding: 8px
+    position: sticky
+    top: 0
     scrollbar-width: thin
     scrollbar-color: $purple $purple_light
 
