--- a/src/css/project/_tags.sass
+++ b/src/css/project/_tags.sass
@@ -6,15 +6,15 @@
   padding: 0
 
   &__item
-    margin-bottom: 8px
+    margin-bottom: 6px
 
     &:not(:last-child)
-      margin-right: 24px
+      margin-right: 6px
 
   &__button
     align-items: center
     background-color: $purple_light
-    border: 1px solid $purple
+    border: none
     border-radius: $border-radius
     color: $purple
     display: inline-flex
@@ -33,7 +33,7 @@
 a.tags__button,
 button.tags__button
   cursor: pointer
-  
+
   &:hover,
   &:focus
     background-color: $purple
