--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -78,3 +78,9 @@
 @import "project/_about.sass"
 
 @import "project/_decor.sass"
+
+@import "project/_filter.sass"
+
+@import "project/_analyzes.sass"
+
+@import "project/_analysis-detail.sass"
