--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -146,7 +146,7 @@
                 <img src="images/logo_full.svg" alt="СЕВЕРО-ЗАПАДНЫЙ ЦЕНТР ДОКАЗАТЕЛЬНОЙ МЕДИЦИНЫ">
             </div>
             <div class="footer__links">
-                <ul>
+                <ul class="footer__links-list">
                     <li><a href="#">Политика конфиденциальности</a></li>
                     <li><a href="#">Обработка персональных даных</a></li>
                     <li><a href="#">Карта сайта</a></li>
