--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -25,6 +25,7 @@ h4,.h4,
 h5,.h5,
 h6,.h6
   font-weight: 700
+  margin-top: 0
 
 h1,
 .h1
@@ -105,12 +106,6 @@ h6,
   @media(min-width: 1350px)
     font-size: 16px
 
-h1,.h1,
-h2,.h2,
-h3,.h3,
-h4,.h4,
-h5,.h5,
-h6,.h6,
 p,
 ul,
 ol,
@@ -118,7 +113,7 @@ table,
 .table-responsive,
 .responsive-table
   margin-top: 0
-  margin-bottom: 20px
+  margin-bottom: 24px
 
   &:last-child
     margin-bottom: 0
@@ -168,6 +163,22 @@ ol
   list-style-position: inside
   padding: 0
 
+ul
+  list-style: none
+  padding: 0
+
+  &:not([class])
+    li
+      position: relative
+      padding-left: 20px
+
+      &::before
+        content: '•'
+        left: 0
+        position: absolute
+        text-align: center
+        top: 0
+        width: 20px
 
 .title-block
   display: flex
